# Fast-Height-Approx-Algorithm

./: CMakeLists.txt  main.cpp  readme.md
include/: BMHeap.h  BoundField_2.h  PerlinNoise.hpp
include/BoundField_2/: FunctionField_2.h  RasterFileField_2.h
include/MeshFunctions/: mesh_functions.hpp
src/: BoundField_demo.cpp  CMakeLists.txt  FstHApproxMesh_demo.cpp  mesh_functions.cpp
test/: CMakeLists.txt  testBMHeap.cpp
